--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -3,26 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "sideEffects": false,
+  "type": "module",
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "remix dev --manual",
+    "start": "remix-serve ./build/index.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint app/"
   },
   "dependencies": {
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
-    "@remix-run/serve": "^1.19.3",
-    "@remix-run/server-runtime": "^1.19.3",
-    "@vercel/analytics": "^0.1.11",
-    "@vercel/remix-entry-server": "^0.1.1",
+    "@remix-run/css-bundle": "^2.0.1",
+    "@remix-run/node": "^2.0.1",
+    "@remix-run/react": "^2.0.1",
+    "@remix-run/serve": "^2.0.1",
+    "@vercel/analytics": "^1.0.2",
+    "@vercel/remix": "^2.0.1",
+    "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.3",
-    "@types/react": "^18.2.21",
+    "@remix-run/dev": "^2.0.1",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
