--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -12,12 +12,14 @@
     "lint": "eslint app/"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
     "@vercel/analytics": "^1.0.2",
     "@vercel/remix": "^2.0.1",
+    "framer-motion": "^10.16.4",
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +30,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "eslint-config-custom": "workspace:*",
+    "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
     "typescript": "^5.2.2"
   },
