--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 auto-install-peers = true
+legacy-peer-deps=true
+node-linker=hoisted
 public-hoist-pattern[]=*@nextui-org/*
+public-hoist-pattern[]=eslint
