--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "eslint": "^8.48.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "jest": "^29.6.4",
     "prettier": "^2.7.1",
     "turbo": "latest"
