--- a/apps/storybook/turbo.json
+++ b/apps/storybook/turbo.json
@@ -2,7 +2,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "outputs": ["storybook-static/**"]
+      "outputs": ["dist/**"]
     }
   }
 }
