--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -7,7 +7,7 @@
     "build": "storybook build -o dist",
     "dev": "storybook dev -p 6006",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "pnpm storybook build -o dist-test --quiet && pnpm concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm http-server dist-test --port 6006 --silent\" \"pnpm wait-on tcp:6006 && pnpm test-storybook\""
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
@@ -16,6 +16,7 @@
     "ui": "workspace:*"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.4.5",
     "@storybook/addon-essentials": "^7.4.5",
     "@storybook/addon-interactions": "^7.4.5",
     "@storybook/addon-links": "^7.4.5",
@@ -23,8 +24,10 @@
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.4.5",
     "@storybook/cli": "^7.4.5",
+    "@storybook/jest": "^0.2.2",
     "@storybook/react": "^7.4.5",
     "@storybook/react-vite": "^7.4.5",
+    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "^0.2.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -32,14 +35,17 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "http-server": "^14.1.1",
     "postcss": "^8.4.30",
     "prop-types": "^15.8.1",
     "storybook": "^7.4.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "wait-on": "^7.0.1"
   }
 }
