--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -16,6 +16,7 @@
     "ui": "workspace:*"
   },
   "devDependencies": {
+    "next-ui-config": "workspace:*",
     "@storybook/addon-a11y": "^7.4.5",
     "@storybook/addon-essentials": "^7.4.5",
     "@storybook/addon-interactions": "^7.4.5",
@@ -34,16 +35,13 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "http-server": "^14.1.1",
-    "postcss": "^8.4.30",
     "prop-types": "^15.8.1",
     "storybook": "^7.4.5",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "wait-on": "^7.0.1"
