--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,16 +25,14 @@
     "@nextui-org/react": "^2.1.13",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.16",
     "eslint-config-custom": "workspace:*",
     "framer-motion": "^10.16.4",
     "jest-presets": "workspace:*",
-    "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
+    "next-ui-config": "workspace:*",
     "tsup": "^6.2.3",
     "typescript": "^5.2.2"
   }
