--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
