--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "ui-public-transport": "workspace:*"
   },
   "devDependencies": {
     "next-ui-config": "workspace:*",
