--- a/apps/oeva/package.json
+++ b/apps/oeva/package.json
@@ -6,18 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev --manual",
+    "dev": "PORT=3010 remix dev --manual -p 3011",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint app/"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/theme": "^2.1.9",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
-    "@vercel/analytics": "^1.0.2",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/remix": "^2.0.1",
     "framer-motion": "^10.16.4",
     "isbot": "latest",
@@ -27,12 +28,13 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "eslint-config-custom": "workspace:*",
     "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "next-ui-config": "workspace:*"
   },
   "engines": {
     "node": ">=18"
