--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -5,47 +5,50 @@
   "type": "module",
   "scripts": {
     "build": "storybook build -o dist",
-    "dev": "storybook dev -p 6006",
+    "dev": "storybook dev -p 6006 --ci",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "pnpm storybook build -o dist-test --quiet && pnpm concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm http-server dist-test --port 6006 --silent\" \"pnpm wait-on tcp:6006 && pnpm test-storybook\""
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/theme": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "ui": "workspace:*",
     "ui-public-transport": "workspace:*"
   },
   "devDependencies": {
-    "next-ui-config": "workspace:*",
-    "@storybook/addon-a11y": "^7.4.5",
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-a11y": "^7.4.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.7",
-    "@storybook/blocks": "^7.4.5",
-    "@storybook/cli": "^7.4.5",
-    "@storybook/jest": "^0.2.2",
-    "@storybook/react": "^7.4.5",
-    "@storybook/react-vite": "^7.4.5",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/cli": "^7.4.6",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
     "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.1",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vitejs/plugin-react": "^4.1.0",
     "concurrently": "^8.2.1",
-    "eslint": "^8.45.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "http-server": "^14.1.1",
+    "next-ui-config": "workspace:*",
+    "tsconfig": "workspace:*",
     "prop-types": "^15.8.1",
-    "storybook": "^7.4.5",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "storybook": "^7.4.6",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
     "wait-on": "^7.0.1"
   }
 }
