--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "eslint": "^8.48.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "jest": "^29.6.4",
-    "prettier": "^2.7.1",
-    "turbo": "latest"
+    "@types/jest": "^29.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "turbo": "^1.10.15"
   },
   "packageManager": "pnpm@8.6.10"
 }
