--- a/packages/next-ui-config/package.json
+++ b/packages/next-ui-config/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@nextui-org/react": "^2.1.13"
+    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/theme": "^2.1.9"
   },
   "devDependencies": {
+    "@types/node": "^20.8.5",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   }
 }
