--- a/apps/oeva/package.json
+++ b/apps/oeva/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "sideEffects": false,
-  "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "PORT=3010 remix dev --manual -p 3011",
+    "build": "run-s build:*",
+    "dev": "run-p dev:*",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint app/"
+    "lint": "eslint app/",
+    "build:remix": "remix build",
+    "build:worker": "remix-pwa build",
+    "dev:remix": "PORT=3010 remix dev -p 3011",
+    "dev:worker": "remix-pwa dev"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
@@ -24,7 +27,14 @@
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "dotenv": "^16.3.1",
+    "@remix-pwa/cache": "^2.0.12",
+    "@remix-pwa/sw": "^2.1.11",
+    "@remix-pwa/strategy": "^2.1.9",
+    "@remix-pwa/push": "^1.0.9",
+    "@remix-pwa/client": "^2.0.1",
+    "@remix-pwa/sync": "^2.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
@@ -34,7 +44,12 @@
     "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
     "typescript": "^5.2.2",
-    "next-ui-config": "workspace:*"
+    "next-ui-config": "workspace:*",
+    "@remix-pwa/worker-runtime": "^2.0.7",
+    "@remix-pwa/dev": "2.0.30",
+    "remix-pwa": "^3.0.18",
+    "npm-run-all": "^4.1.5",
+    "glob": "^10.3.10"
   },
   "engines": {
     "node": ">=18"
