--- a/apps/oeva/package.json
+++ b/apps/oeva/package.json
@@ -28,13 +28,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
+    "ui-public-transport": "workspace:*",
     "dotenv": "^16.3.1",
     "@remix-pwa/cache": "^2.0.12",
     "@remix-pwa/sw": "^2.1.11",
     "@remix-pwa/strategy": "^2.1.9",
     "@remix-pwa/push": "^1.0.9",
     "@remix-pwa/client": "^2.0.1",
-    "@remix-pwa/sync": "^2.0.1"
+    "@remix-pwa/sync": "^2.0.1",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.1",
