--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -2,7 +2,6 @@
   "name": "storybook",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "build": "storybook build -o dist",
     "dev": "storybook dev -p 6006 --ci",
@@ -27,6 +26,8 @@
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.4.6",
+    "@storybook/preview-api": "^7.4.6",
+    "@storybook/types": "^7.4.6",
     "@storybook/cli": "^7.4.6",
     "@storybook/jest": "^0.2.3",
     "@storybook/react": "^7.4.6",
