--- a/apps/oeva/package.json
+++ b/apps/oeva/package.json
@@ -17,42 +17,42 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/theme": "^2.1.9",
-    "@remix-run/css-bundle": "^2.0.1",
-    "@remix-run/node": "^2.0.1",
-    "@remix-run/react": "^2.0.1",
-    "@remix-run/serve": "^2.0.1",
+    "@remix-pwa/cache": "^2.0.12",
+    "@remix-pwa/client": "^2.0.1",
+    "@remix-pwa/push": "^1.0.9",
+    "@remix-pwa/strategy": "^2.1.9",
+    "@remix-pwa/sw": "^2.1.11",
+    "@remix-pwa/sync": "^2.0.1",
+    "@remix-run/css-bundle": "^2.1.0",
+    "@remix-run/node": "^2.1.0",
+    "@remix-run/react": "^2.1.0",
+    "@remix-run/serve": "^2.1.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/remix": "^2.0.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.17.0",
+    "react-router-dom": "^6.17.0",
     "ui": "workspace:*",
-    "ui-public-transport": "workspace:*",
-    "dotenv": "^16.3.1",
-    "@remix-pwa/cache": "^2.0.12",
-    "@remix-pwa/sw": "^2.1.11",
-    "@remix-pwa/strategy": "^2.1.9",
-    "@remix-pwa/push": "^1.0.9",
-    "@remix-pwa/client": "^2.0.1",
-    "@remix-pwa/sync": "^2.0.1",
-    "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "ui-public-transport": "workspace:*"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.0.1",
-    "@types/react": "^18.2.28",
+    "@remix-pwa/dev": "2.0.30",
+    "@remix-pwa/worker-runtime": "^2.0.7",
+    "@remix-run/dev": "^2.1.0",
+    "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.13",
     "eslint-config-custom": "workspace:*",
+    "glob": "^10.3.10",
+    "next-ui-config": "workspace:*",
+    "npm-run-all": "^4.1.5",
+    "remix-pwa": "^3.0.18",
     "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
-    "typescript": "^5.2.2",
-    "next-ui-config": "workspace:*",
-    "@remix-pwa/worker-runtime": "^2.0.7",
-    "@remix-pwa/dev": "2.0.30",
-    "remix-pwa": "^3.0.18",
-    "npm-run-all": "^4.1.5",
-    "glob": "^10.3.10"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
